--- a/.github/workflows/crowdin-i18n-download.yml
+++ b/.github/workflows/crowdin-i18n-download.yml
@@ -1,41 +1,40 @@
-name: Crowdin Sync
+name: Crowdin i18n Download Translations
 on:
   workflow_dispatch:
-  # schedule:
-  # (TODO?) run this Action every 14 days
-  # - cron: '0 * */14 * *'
 
 jobs:
-  i18n-sync-docs:
-    name: Docs
+  
+  i18n-download-curriculum-translations:
+    name: Learn
     runs-on: ubuntu-18.04
 
     steps:
       - name: Checkout Source Files
         uses: actions/checkout@v2
 
-      - name: Crowdin Synchronize
+      - name: Crowdin Download
         uses: crowdin/github-action@master
         # options: https://github.com/crowdin/github-action/blob/master/action.yml
         with:
           # uploads
-          upload_translations: false
+          upload_sources: true
+          upload_translations: true
           auto_approve_imported: false
           import_eq_suggestions: false
 
           # downloads
           download_translations: true
-          commit_message: 'chore(i8n,docs): processed translations from crowdin'
+          commit_message: 'chore(i8n,learn): processed translations from crowdin'
 
           # pull-request
-          localization_branch_name: i18n-sync-docs
+          localization_branch_name: i18n-sync-learn-processed-translations
           create_pull_request: true
-          pull_request_title: 'chore(i18n,docs): processed translations from crowdin'
+          pull_request_title: 'chore(i18n,learn): processed translations from crowdin'
           pull_request_body: ''
-          pull_request_labels: 'scope: i18n, scope: docs, crowdin-sync'
+          pull_request_labels: 'scope: i18n, scope: learn, crowdin-sync'
 
           # global options
-          config: './docs/crowdin.yml'
+          config: './curriculum/crowdin.yml'
           base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
 
           # Uncomment below to debug
@@ -43,5 +42,5 @@ jobs:
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID_DOCS }}
+          CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID_CURRICULUM }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_SERVICE_TOKEN }}
